# chefkoch

./: .gitignore  LICENSE  LICENSE.txt  README.md  chefkoch.py  pyproject.toml  requirements.txt  setup.py  specifications.json
chefkoch-api/: chefkoch.py
chefkoch_api/: chefkoch.py
python_chefkoch/: __init__.py  chefkoch.py
src/: categories.json
src/chefkoch/: __init__.py  recipe.py  retrievers.py
tests/: test_chefkoch_api.py  test_recipe.py  test_retrievers.py
